--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background: #fafaface;
+  background: #f4f4f4;
   height: 100vh;
   width: 100vw;
   padding-top: 5%;
